# 2017_12_21_ADDA_ExecutionWrapper_versionControlled

./: .gitignore  BlastAllToAll.py  Configurations.py  ConvertToADDA.py  CreateFakeDataForTesting.py  MyNotes.txt  README.txt  RunADDA.py  class_2013_02_07_hsp.py  commands.txt  index.in  rcm_module_tree.py  run.py  util.py
OtherSoftware/adda-0.1.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  libtool  mkinstalldirs  reconf
OtherSoftware/adda-0.1.0/m4/: Makefile  Makefile.am  Makefile.in
OtherSoftware/adda-0.1.0/src/: Makefile  Makefile.am  Makefile.in  adda  adda.cpp  adda.h  adda_index  adda_index.cpp
Result/: 00036_Neur_chan_membaddaOut.txt
Sequences/: 00100_Cu_amine_oxidN3.fasta  00200_RNA_pol_Rpb2_1.fasta
src/: BlastAllToAll.py  ConvertToADDA.py  CreateFakeDataForTesting.py  RunADDA.py  class_2013_02_07_hsp.py  rcm_module_tree.py  util.py
